Reduced the width of the mainbody id to correct for the div dropping beneath the codeeditor div when the window is reduced in size. I also increased the size of the text in the codeeditor class because it was hard to read on small screens, I checked it on my phone.

--- a/intro.css
+++ b/intro.css
@@ -4,7 +4,7 @@ background: #FFFFFF;
 margin-left:auto;
 margin-right:auto;
 margin-top: 0;
-min-width: 380px;
+min-width: 480px;
 }
 
 hr {
@@ -77,7 +77,7 @@ padding: 5px;
 }
 
 #mainbody {
-width:80%;
+width:75%;
 float: left;
 padding-bottom:20px;
 padding-left: 5px;
@@ -116,7 +116,7 @@ padding: 5px;
 
 .codeeditor {
 color: #000000;
-font-size: .7em; 
+font-size: .8em; 
 font-family: Georgia, Arial, "Times New Roman";
 text-align: left;
 margin: 0;
